# resy-bot

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Procfile  README.md  config.py  main.py  pyproject.toml
reservation_configs/: reservations.json
reservation_configs/timed/: 4-charles.json  diner.json
resy_bot/: api_access.py  constants.py  errors.py  logging.py  manager.py  model_builders.py  models.py  scheduler.py  selectors.py
tests/: factories.py  test_api_access.py  test_manager.py  test_model_builders.py  test_selectors.py
