[tool.poetry]
name = "resy-bot"
version = "0.1.0"
description = ""
authors = ["Jeff Knaide <jeffknaide@gmail.com>"]
readme = "README.md"
packages = [{include = "resy_bot"}]

[tool.poetry.dependencies]
python = "3.12.2"
pydantic = "^1.10.4"
requests = "^2.28.2"
pre-commit = "^3.6.0"
flask = "^3.0.2"
dateparser = "^1.2.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
factory-boy = "^3.2.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
mypy = "^1.0.0"
types-requests = "^2.28.11.10"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
